--- a/views/potato.pug
+++ b/views/potato.pug
@@ -6,23 +6,8 @@ block content
   div(class="container-fluid")
         div(class="row")
             -
-                let mattress = [
-                    {
-                        "type": "Russet Potatoes",
-                        "expdate": "12/06/2021",
-                        "cost": 9.76
-                    },
-                    {
-                        "type": "Red Potatoes",
-                        "expdate": "12/29/2021",
-                        "cost": 4.55
-                    },
-                    {
-                        "type": "Petite Potatoes",
-                        "expdate": "11/09/2022",
-                        "cost": 7.66
-                    },                   
-                ]
+                let mattress = results
+                
             each v,index in mattress
                 div(class="col-sm-2" onclick=`buy(${index})`) #{v.type}
                 div(class="col-sm-2" onclick=`buy(${index})`) #{v.expdate}
