--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,27 @@ body {
 a {
   color: #00B7FF;
 }
+
+.create_potato{
+  background-color: rgb(42, 126, 165);
+  width: 50%;
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+
+}
+
+.create_btn{
+  background-color: darkgray;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.create_input{
+  margin: 35px 0 !important;
+}
+
+.create_label{
+  margin:15px 0;
+  text-transform: uppercase;
+}
