--- a/views/potato.pug
+++ b/views/potato.pug
@@ -2,19 +2,26 @@ extends layout
 
 block content
   h1= title
-  p Potato results
+  p Welcome to the potato pug
   div(class="container-fluid")
         div(class="row")
             -
-                let mattress = results
+                let potato = results
                 
-            each v,index in mattress
-                div(class="col-sm-2" onclick=`buy(${index})`) #{v.type}
-                div(class="col-sm-2" onclick=`buy(${index})`) #{v.expdate}
-                div(class="col-sm-2" onclick=`buy(${index})`) #{v.cost}
-
-                script.                
-                      function buy(intemNo)
-                      {
-                            alert(`you purchased Item ${intemNo+1}`)
-                      }
+  div(class="container-fluid") 
+    div(class="row  m-1") 
+      each item in potato 
+       - let destination = `dispatch(\"/potato/update?id=${item._id}\")` 
+        div(class="row-sm-2", class="m-1") potato #{item.type}(#{item.expdate}) is #{item.cost}
+            button.btn( class="btn-primary ml-1", onclick= destination) Update
+            
+        script.                
+            function buy(itemNo)
+            {
+                  alert(`you purchased Item ${itemNo+1}`)
+            }
+        script. 
+          function dispatch(path)
+          { 
+              window.location.href=path 
+          }
