--- a/views/potatodelete.pug
+++ b/views/potatodelete.pug
@@ -24,11 +24,11 @@ block content
       input(class="btn btn-danger " type="submit" value="Delete" id="delete")      
       a(href='/potato' class="btn btn-secondary") Cancel
 
-      script. 
-    function cancel() { 
-      // Go back to the home page for the costume collection 
-      window.location.href='/potato' 
-    } 
+    //-   script. 
+    //- function cancel() { 
+    //-   // Go back to the home page for the costume collection 
+    //-   window.location.href='/potato' 
+    //- } 
 
 
   script. 
