--- a/views/index.pug
+++ b/views/index.pug
@@ -1,14 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to NorthWest #{title} 
-  button(type='button',onclick='update()',class='btn btn-primary') Press Me
-  div(id="target") text of Display 
-  script.
-    var client_count = 0;
-    function update(){
-      client_count +=1;
-      document.getElementById("target").innerHTML = "Value now " + client_count;
-    }
-  a(href='potato') potato
+
+
+  if (!user)
+   a(href="/login") Login
+   br
+   br
+   a(href="/register") Register
+  if (user)
+   p You are currently logged in as #{user.username}
+   a(href="/potato") Take me to potato
+   br
+   br
+   a(href="/logout") Logout
